cargo-aprz-lib/src/commands/snapshots/cargo_aprz_lib__commands__validate__tests__invalid_toml_syntax.snap
---
source: cargo-aprz-lib/src/commands/validate.rs
assertion_line: 189
expression: snapshot_content
---
TOML parse error at line 3, column 20
  |
3 | [[high_risk_if_any]
  |                    ^
unclosed array table, expected `]`
